--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "rxjs": "~6.5.5",
     "slick-carousel": "^1.8.1",
     "tslib": "^2.0.0",
+    "videogular2": "^7.0.2",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
